--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".modules.Player"></activity>
+        <activity android:name=".models.Player"></activity>
         <activity android:name=".NationalTeamActivity" />
         <activity
             android:name=".MainActivity"
