--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven{
+            url 'repo1.maven.org/maven2'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
@@ -15,11 +17,12 @@ buildscript {
     }
 }
 
+
 allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
     }
 }
 
