--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".items.SessionItem"
+            android:label="@string/title_activity_session_item"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".sportClubUI.sportEvents.information.FragmentSportEventInformations" />
         <activity android:name=".models.Player" />
-        <activity android:name=".NationalTeamActivity" />
+        <activity android:name=".ui.national_teams.NationalTeamActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -22,6 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".sportClubUI.sportEvents.SportEventActivity" />
+        <activity android:name=".sportClubUI.session.SessionActivity" />
+        <activity android:name=".nationalTeamsUI.schedule_matches.DetailItemRvScheduleMatchesActivity" />
     </application>
 
 </manifest>
